--- a/gb/ncid283_3.md
+++ b/gb/ncid283_3.md
@@ -27,7 +27,7 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/30/n11755989.md#1" target="_blank">没钱了！中共两部门都喊2020过“紧日子”</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/30/n11755989.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/DvhVG02UwAEHcE6-150x120.jpg" align ="left"></a>真没钱了！继中共财政部长刘昆喊“过紧日子”两天后，中共商务部长钟山也号召全国商务系统2020年要“勤俭节约”，过“紧日子”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 2:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/30/n11755948.md#1" target="_blank">纳瓦罗：美中或在下周签第一阶段贸易协议</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/30/n11755948.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1DM33I-150x120.jpg" align ="left"></a>白宫贸易顾问纳瓦罗周一（12月30日）表示，美中第一阶段贸易协议可能会在下周签署；但他也强调，确认信息需要从川普（特朗普）总统或美国贸易代表莱特希泽那里获得。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 1:49 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/30/n11753878.md#1" target="_blank">【十字路口】2020年中国经济九大趋势（下）</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/30/n11753878.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e527dd081aac9c_ttl7dayb8c_20191230-____-DJY-150x120.jpg" align ="left"></a>中共害怕失业潮与粮食危机！2020中国经济九大趋势（下）......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 1:15 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/30/n11755722.md#1" target="_blank">传刘鹤本周末赴美签署第一阶段贸易协议</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/30/n11755722.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1180211245-1-150x120.jpg" align ="left"></a>《南华早报》援引知情人士透露，中共副总理刘鹤将于本周六（1月4日）率团前往华盛顿，预计签署第一阶段贸易协议。这将会在很大程度上为美中贸易战降温。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 11:27 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/2/n11761856.md#1" target="_blank">国企巨头爆雷：计提减值40亿 海工业务亏80亿</a><br></h3>大陆国企、制造业巨头中国国际海运集装箱股份有限公司（简称中集集团）2019年12月30日晚发布公告说，公司预计2019年需计提减值约40亿~55亿元人民币。而2019年前三季度，该集团归属于上市公司股东的净利润为6.36亿元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 7:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11761256.md#1" target="_blank">中国华融债务危机 恐引台湾30档基金爆雷</a><br></h3>位居中国（中共）四大资产管理公司之首的“华融集团”，前党委书记兼董事长赖小民2018年4月因贪污落马，该集团也接连爆出债务危机。日前有媒体披露台湾35档债券型基金踩到地雷，因配置华融公司债导致至少有27亿台币（约人民币6.3亿元）曝险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 5:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283_3.md#1<br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fcjmkl2375/djy/blob/master/gb/ncid283_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid283_3.htm">http://www.epochtimes.com/gb/ncid283_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
