--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -35,12 +35,12 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787522.md#1">不满伊朗政权 唯一奥运夺牌女运动员出走</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786992.md#1">中共外交部被点名“选人用人视野不宽”</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787319.md#1">美国9个观选团访台 斯伯丁将军分享推文</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787039.md#1">蔡英文以817万票高票胜选 韩粉被打脸</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786479.md#1">警告伊朗勿屠杀抗议人民 川普：全球都在看</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787039.md#1">韩粉称“若蔡英文得800万票请全台吃鸡排”</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786649.md#1">大陆“国家一级演员”受贿细节首次被曝光</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786635.md#1">台湾人从海外回乡 用选票向中共传递何信息</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786579.md#1">【翻墙必看】分析：中共对台湾大选的误判</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786421.md#1">加国检察官：孟晚舟案符合引渡至美国原则</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786479.md#1">警告伊朗勿屠杀抗议人民 川普：全球都在看</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786193.md#1">【热点互动】台湾大选红绿对决 习承诺或落空</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787628.md#1">赤字多又缺钱 中共地方当局紧缩开支</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787227.md#1">美中签约后 三大因素或使中共承诺成空</a><br>
