--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786063.md#1">【拍案惊奇】蔡英文连任！北京的三层误判</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777903.md#1">骆惠宁称揪心 郭文贵：骆绝对心狠手辣</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787934.md#1">李靖宇：台湾大选 中共成蔡英文“最大助选员”</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787425.md#1">陈思敏：上海银行爆大雷 官场震动</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787398.md#1">念贲：没有选票  我们去奋斗去努力</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787244.md#1">程晓容：台大选重挫中共 五大冲击波牵动全球</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785931.md#1">海风：蔡英文连任 北京“帮了大忙”</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785255.md#1">朱同：文斗武斗都是斗</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785090.md#1">王友群：刘鹤终于要来美国签协议了</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11784686.md#1">海风：中共到底还能撑多久？</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780385.md#1">【新闻看点】王立强爆遭威胁 台大选狂澜骤起</a><br>
