--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -25,16 +25,7 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760402.md#1" target="_blank">陆言：医生被杀案是中共治下恶果的冰山一角</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760402.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/12/1310271804532583-150x120.jpg" align ="left"></a>2019年12月4日北京民航医院急诊科接诊了一位95岁的老年女性，病史为脑梗塞后遗症。病人来院时呕吐、意识不清，随行家属拒绝一切检查，只要求“输液”。仅“输液”难以改善病情，于是家属恶意指责治疗有误，并开展了长达半个月的对医院的责骂，并拒绝医疗鉴定。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11759960.md#1" target="_blank">程晓容：惧《反渗透法》中共偷换焦点渲染恐怖</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11759960.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/420148-150x120.jpg" align ="left"></a>12月31日，台湾立法院会三读通过《反渗透法》，在台海两岸引发震荡。支持者表示欣慰，中共国台办和官媒进行抨击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:03 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760290.md#1" target="_blank">袁斌：香港花季少女之死告诉你中共有多邪</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760290.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010409301501-150x120.jpg" align ="left"></a>9月22日，香港15岁花季少女陈彦霖被发现浮尸海上后，警方放风是自杀，但种种疑点却使人怀疑是他杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 6:42 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11764895.md#1" target="_blank">海网：龟蛇对鼠哭新愁</a><br></h3>长江见底现新洲，
-龟蛇对鼠哭新愁。
-不明肺炎从新冒，
-辟谣消声重新揪。
-瘟神似借新春运，
-恶党却蒙新盖头。
-非典悲剧如再演，
-恐有更多命白丢。
-天灭中共恩浩荡，
-魔拉陪葬雾浓稠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:12 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760118.md#1" target="_blank">颜智华：北京医生被杀 背后或掩盖医疗黑幕</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/1/n11760118.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2005/12/51201172533459-150x120.jpg" align ="left"></a>??2019年12月24日发生在北京民航总医院急诊部的杀害女医生杨文案件，凶手孙文斌55岁，是在该医院急诊部留诊了20天的95岁高龄女患者孙某氏的儿子。作案手段极其残忍血腥，用刀几乎割断了医生的脖颈。案件震惊了中国朝野上下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 5:04 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11764415.md#1" target="_blank">林泉：香江之歌</a><br></h3>美丽香江城，雄伟狮子峰。
 九七落魔掌，从此无太平。
 中共施恶法，欲变红魔城。
