--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777957.md#1">年关难过 大陆网络公司新一波裁员潮来临</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788008.md#1">蔡英文高票当选 网络调侃央视主播“贡献”</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788031.md#1">花絮：通缉犯投票被逮 孕妇产完冲向票站</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787972.md#1">黄之锋：蔡英文胜选对香港人是一个宝贵时刻</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786579.md#1">【翻墙必看】分析：中共对台湾大选的误判</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786992.md#1">中共外交部被点名“选人用人视野不宽”</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787319.md#1">美国9个观选团访台 斯伯丁将军分享推文</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786567.md#1">神韵辉映欧洲最古老剧院 精英感恩神性内涵</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786479.md#1">警告伊朗勿屠杀抗议人民 川普：全球都在看</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787628.md#1">赤字多又缺钱 中共地方当局紧缩开支</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787227.md#1">美中签约后 三大因素或使中共承诺成空</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787408.md#1">蔡英文胜选 法专家：国际社会应守护台湾民主</a><br>
